# notes

./: .gitignore  CMakeLists.txt  compile_commands.json  shell.nix
.cache/clangd/index/: GlobalState.hpp.F5C6506E88573BE1.idx  commands.cpp.C5975D2D141C1BBF.idx  commands.cpp.F0760063BD9470FF.idx  commands.hpp.2B2E77AE0D588C2F.idx  commands.hpp.91F439AE75491BFB.idx  main.cpp.9C5A82C3D191023B.idx  task.hpp.7DC4C3509A587DAB.idx  tasks.cpp.E28622698CC333B5.idx  tasks.hpp.8ED8548386D0F9B3.idx
src/: GlobalState.hpp  commands.cpp  commands.hpp  main.cpp  task.hpp
src/modules/: commands.cpp  tasks.cpp
